# geap-tour

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: eval_ci.yaml  eval_pipeline.yaml
diagrams/: batch_manifest.yaml
diagrams/inputs/: 01_multi_agent_topology.txt  02_deployment_architecture.txt  03_eval_pipeline.txt  04_agent_identity_gateway.txt  05_observability_stack.txt  06_ci_cd_flow.txt  07_agent_armor.txt  08_reference_architecture.txt
docs/: eval_operations.md  faq.md  multi_model_cost_comparison.md  slides.html  workshop_guide.md
docs/diagrams/: evaluation_pipeline.txt  geap_architecture_overview.txt  manifest.yaml  model_armor_security_layers.txt  multi_agent_mcp_topology.txt
docs/screenshots/: project_structure.txt  test_results.txt
docs/verification/: cloud_run_services.json  logging_sink.json  model_armor_geap-workshop-prompt.json  model_armor_geap-workshop-response.json
scripts/: capture_screenshots.py  cleanup.sh  deploy_all.sh  deploy_router.sh  generate_diagrams.sh  generate_pptx.py  register_agent_registry.sh  setup_agent_gateway.sh  setup_agent_identity.sh  setup_governance_policies.sh  setup_logging_sink.sh  setup_model_armor.sh  verify_deployment.sh
scripts/toolspecs/: booking_toolspec.json  expense_toolspec.json  search_toolspec.json
src/: __init__.py  config.py  registry.py
src/agents/: coordinator_agent.py  expense_agent.py  travel_agent.py
src/agents/coordinator/: agent.py  requirements.txt
src/armor/: config.py
src/deploy/: deploy_agents.py  deploy_all.py  deploy_mcp_servers.py
src/eval/: agent_eval_configs.py  batch_eval.py  complexity_metrics.py  failure_clusters.py  manage_monitors.py  multi_agent_batch_eval.py  one_time_eval.py  quality_alerts.py  router_eval.py  run_all_evals.py  run_router_eval.sh  run_user_sim.sh  setup_online_evaluators.py  setup_online_monitors.py  simulated_eval.py  verify_monitors.py
src/eval/evalsets/: coordinator.evalset.json  eval_config.json  expense_agent.evalset.json  router_agent.evalset.json  router_eval_config.json  travel_agent.evalset.json
src/eval/scenarios/: coordinator_scenarios.json  eval_config.json  expense_scenarios.json  router_eval_config.json  router_scenarios.json  session_input.json  travel_scenarios.json  user_sim_config.json
src/mcp_servers/: auth.py
src/mcp_servers/booking/: Dockerfile  mock_db.py  server.py
src/mcp_servers/expense/: Dockerfile  mock_db.py  (+1 more)
src/optimize/: run_optimize.py  sampler_config.json
src/router/: agent.py  agents.py  armor.py  complexity.py  config.py  cost_tracker.py  demo.py  requirements.txt  run_comparison.py
src/traffic/: generate_traffic.py
tests/: test_agents.py  test_armor.py  test_e2e.py  test_eval.py  test_mcp_servers.py  test_multi_agent_eval.py  test_router.py
(+3 files in other folders)
